Added Download QR Feature

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -5,3 +5,11 @@
 .buton:hover {
   background-color: #3a1585;
 }
+.my-buton {
+  background-color: #f6c810;
+}
+
+.my-buton:hover {
+  background-color: #f4a93c;
+}
+
