--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -124,6 +124,10 @@
   @media screen and (max-width: 600px) {
     .footer {       
         margin-top:34%;
+        position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
         /* background-color: red; */
       }
   }
