--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -13,6 +13,11 @@
     align-items: center;
     flex-direction: column;
     margin-top:10%;
+
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
   }
   
   .social-icon,
