--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,21 @@ code {
         padding-bottom: 2rem;
     }
   }
+
+
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    /* Your tablet-specific styles go here */
+    
+    .conatiner{
+      min-height: 100vh;
+    }
+    .footer{
+      position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    }
+    .column2{
+      width: 65%;
+    }
+  }
